--- a/aspnet-core/src/Acme.BookStore.Domain.Shared/Localization/BookStore/es.json
+++ b/aspnet-core/src/Acme.BookStore.Domain.Shared/Localization/BookStore/es.json
@@ -26,6 +26,11 @@
     "Enum:BookType.5": "Horror",
     "Enum:BookType.6": "Ciencia",
     "Enum:BookType.7": "Ciencia Ficción",
-    "Enum:BookType.8": "Poesía"
+    "Enum:BookType.8": "Poesía",
+    "Permission:BookStore": "Tienda de Libros",
+    "Permission:Books": "Gestión de Libros",
+    "Permission:Books.Create": "Creación Libros Nuevos",
+    "Permission:Books.Edit": "Edición de Libroe",
+    "Permission:Books.Delete": "Eliminación de Libros"
   }
 }
